# ghc-api-usage-stats

./: .gitignore  README.md
analyze-ghc-names/: README.md  analyze-ghc-names.hs  output.txt
analyze-ghc-names/data/: hint.txt  hlint.txt  hls.txt  large-records.txt  liquidhaskell.txt  om-plugin-imports.txt  ormolu.txt  print-api.txt  retrie.txt  skeletest.txt  stan.txt  stylish-haskell.txt  tasty-autocollect.txt  transitive-constraint-plugin.txt  uom-plugin.txt
print-ghc-names/: CHANGELOG.md  LICENSE  README.md  print-ghc-names.cabal
print-ghc-names/src/: PrintGHCNames.hs
