cabal-version:      3.0
name:               print-ghc-names
version:            0.1.0.0
synopsis:           A plugin that prints names comming from the GHC API.
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Facundo Domínguez
maintainer:         facundo.dominguez@tweag.io
copyright:          Haskell Foundation 2025
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  PrintGHCNames
    -- other-modules:
    -- other-extensions:
    build-depends:    base, ghc, syb
    hs-source-dirs:   src
    default-language: Haskell2010
